minor ui drag z-index bug

--- a/frontend/src/styles/EditSchedule.module.css
+++ b/frontend/src/styles/EditSchedule.module.css
@@ -344,6 +344,7 @@ div .viewTable {
   height: 3rem;
   background-color: white;
   position: relative;
+  z-index: 3;
 }
 
 .listDragOverlay {
