--- a/frontend/src/styles/WantToSee.module.css
+++ b/frontend/src/styles/WantToSee.module.css
@@ -8,7 +8,7 @@
   overflow-y: scroll;
   padding: 1rem;
   flex: 0.5;
-  z-index: 2;
+  z-index: 0;
   position: relative;
 }
 
